force-app/main/default/objects/Book_Copy__c/Book_Copy__c.object-meta.xml
<CustomObject>
    <description>Physical book</description>
    <label>Book Copy</label>
    <nameField>
        <displayFormat>B-{YYYY}-{0000}</displayFormat>
        <label>Book Copy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>