force-app/main/default/objects/Book_Copy__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>This field shows the related list of the records present in the book object</description>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Copies</relationshipLabel>
    <relationshipName>Book_Copies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>