force-app/main/default/objects/Book_Copy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Availability of book copy for loan</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Loaned</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
                <isActive>false</isActive>
                <label>Damaged</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
                <isActive>false</isActive>
                <label>Reserved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>