force-app/main/default/objects/Book_Copy__c/fields/StatusReadOnly__c.field-meta.xml
<CustomField>
    <fullName>StatusReadOnly__c</fullName>
    <formula>TEXT( Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>